# ndk-template

./: .gitignore  CMakeLists.txt  README.md  settings.gradle
app-input-queue/: CMakeLists.txt  build.gradle
app-input-queue/src/main/: AndroidManifest.xml
app-input-queue/src/main/cpp/: native-lib.cpp
app-input-queue/src/main/res/values/: strings.xml
app-native-activity/: CMakeLists.txt  build.gradle
app-native-activity/src/main/: AndroidManifest.xml
app-native-activity/src/main/cpp/: native-activity.cxx  pal-log.cxx  pal-log.hxx
app-native-activity/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
shared/: CMakeLists.txt  build.gradle
shared/src/: native-activity.cxx  native-activity.hxx
